# FGO-LifeSustainer

./: .envrc  .gitignore  Cargo.toml  README.md
.cargo/: config.bak
doc/: .$fgols.drawio.bkp  fgols.drawio
src/: main.rs
src/core/: engine.rs  mod.rs
