[package]
name = "fgo-lifesustainer"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-locator = "0.2.0"
